# cwhttpd-example

./: .gitignore  .gitmodules  CMakeLists.txt  frogfs.yaml  idf.sh  partitions.csv  readme.md  sdkconfig.defaults  wifi_settings.h.example
html/: cwhttpd  espfs.yaml  frogfs  index.html  libespfs  libesphttpd
html/upload/: index.html
html/websocket/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  main.c  storage.c  storage.h  wifi.c  wifi.h  ws.c  ws.h
